<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.amikom.myapplication.MainActivity">

    <EditText
        android:id="@+id/txtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
       android:hint="@string/frm_name"
        />

    <EditText
        android:id="@+id/txtadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
       android:hint="@string/frm_address" />

    <EditText
        android:id="@+id/txtphon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/frm_phn" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/frm_pass"/>

    <CheckBox
        android:id="@+id/chck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/frm_check" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_go" />

    <Button
        android:id="@+id/btnLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_lang"/>




</LinearLayout>
